# Avatar-Rust

./: .gitignore  avatar-frontend-spec.md  index.html  package-lock.json  package.json
backend/: Cargo.toml  build_log.txt
backend/migrations/: 001_init_schema.sql
backend/src/: main.rs
src/app/(auth)/login/: page.tsx
src/app/(auth)/register/: page.tsx
src/app/(main)/: layout.tsx
src/app/(main)/feed/: page.tsx
src/app/(main)/friends/: page.tsx
src/app/(main)/profile/: page.tsx
src/components/features/: PostCard.tsx
src/lib/: api.ts
src/store/: authStore.ts
src/types/: index.ts
